Changed styling on authentication options; linkedin more prominent

--- a/app/assets/stylesheets/authentications.css.scss
+++ b/app/assets/stylesheets/authentications.css.scss
@@ -53,3 +53,15 @@
     }
   }
 }
+
+.options {
+  margin-top: 20px;
+  #facebook, #google {
+    margin-top: 5px;
+    display: inline-block;
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
