--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -46,7 +46,7 @@
           = text_field_tag :position, @position
 
       .button
-        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-info"
+        = submit_tag "Search", name: nil, id: "search-btn", class: "btn btn-info btn-new"
 
       .link
         = link_to "Advanced Search", "", remote: true, id: "advanced-search"
