--- a/app/views/authentications/_options.html.haml
+++ b/app/views/authentications/_options.html.haml
@@ -6,7 +6,7 @@
   .options
     #linkedin
       = link_to (image_tag 'auth/linkedin_64.png', alt: "Connect to LinkedIn"), linkedin_link, id: 'linkedin-connect'
-      = link_to "Connect to LinkedIn", linkedin_link, class: 'btn btn-large'
+      = link_to "Connect to LinkedIn", linkedin_link, class: 'btn btn-large btn-info btn-new'
 
     #facebook
       = link_to (image_tag 'auth/facebook_64.png', alt: "Connect to Facebook"), '/auth/facebook', id: 'fb-connect'
