Included condensed profiles stylesheet in application.css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require donations
  *= require etk_applications
  *= require etk_profiles
+ *= require condensed_profiles
  *= require events
  *= require fonts
  *= require footer
