Changed wording of view blog and forum posts links in profile

--- a/app/views/etkh_profiles/_profile.html.haml
+++ b/app/views/etkh_profiles/_profile.html.haml
@@ -48,10 +48,10 @@
                   = render partial: 'profile_completeness', locals: { value: user.etkh_profile.completeness_score, textType: "link" }
               - else
                 - if user.blog_posts.any?
-                  = link_to "View all blog posts", {controller: "users", action: "user_activity", id: user.id, activity_type: "BlogPosts"}
+                  = link_to "View user's blog posts", {controller: "users", action: "user_activity", id: user.id, activity_type: "BlogPosts"}
                   %br
                 - if user.discussion_posts.any?
-                  = link_to "View all forum posts", {controller: "users", action: "user_activity", id: user.id, activity_type: "ForumPosts"}
+                  = link_to "View user's forum posts", {controller: "users", action: "user_activity", id: user.id, activity_type: "ForumPosts"}
 
               - if user.external_links?
                 .external-links
