Minor change to generation of list of members

--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -18,6 +18,8 @@
         - if !profile.nil? && !profile.organisation.nil?
           .organisation
             %p= profile.organisation
+        .completeness{ style: "float: right;" }
+          %p= profile.completeness_score
         %hr
 
       .body
