--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -199,13 +199,15 @@
 
     #recent-activity {
       .body h3 {
-        padding-top: 10px;
+        padding-top: 5px;
         padding-bottom: 5px;
       }
       .activity-link {
         display: block;
         padding-top: 3px;
         padding-left: 7px;
+        line-height: 18px;
+        margin-bottom: 5px;
       }
     }
     #other-members {
@@ -535,6 +537,7 @@
       .break {
         margin-left: 5px;
         margin-right: 5px;
+        color: lighten($text_color, 30%);
       }
     }
   }
