Changed text of linkedin signup on signup page

--- a/app/views/authentications/_options.html.haml
+++ b/app/views/authentications/_options.html.haml
@@ -5,7 +5,7 @@
 .center
   .options
     #linkedin
-      = link_to (image_tag 'auth/linkedin_64.png', alt: "Connect to LinkedIn"), linkedin_link, id: 'linkedin-connect'
+      = link_to (image_tag 'auth/linkedin_64.png', alt: "Sign-up with LinkedIn"), linkedin_link, id: 'linkedin-connect'
       = link_to "Connect to LinkedIn", linkedin_link, class: 'btn btn-large btn-info btn-new'
 
     #facebook
