Added completion tips to profile completeness

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,6 +1,6 @@
 @import "shared/partials";
 
-.dashboard
+.dashboard {
   h2 {
     margin-top: 0;
   }
@@ -45,5 +45,8 @@
 }
 
 .completeness {
+  width: 275px;
   hr { margin-top: 12px; }
+}
+
 }
