Added view all members link to members page

--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -671,6 +671,10 @@
   #search-form {
     margin: 0px;
     margin-bottom: 25px;
+    //display: inline-block;
+  }
+  #all-members-link {
+    //display: inline-block;
   }
   #members-list {
     position: relative;
