--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -209,6 +209,7 @@
         line-height: 18px;
         margin-bottom: 5px;
       }
+      .user-activity-link { font-weight: bold; }
     }
     #other-members {
       > .body { padding-top: 15px; }
