Fixed link on members page

--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -8,7 +8,7 @@
     #search-form
       = render partial: 'search_form', locals: { otherPage: false }
 
-    = link_to "View all #{EtkhProfile.all.size} members in alphabetical order", id: "all-members-link"
+    = link_to "View all #{EtkhProfile.all.size} members in alphabetical order", "/members/all", id: "all-members-link"
 
     %hr
 
