--- a/app/views/etkh_profiles/_profile_completeness.html.erb
+++ b/app/views/etkh_profiles/_profile_completeness.html.erb
@@ -21,7 +21,11 @@
         <h3 class="completion-title">Completion tips</h3>
         <% tips.take(3).each do |tip| %>
           <div class="tip">
-            <%= image_tag("/assets/images/plus.png", class: "plus-icon") %>
+            <% if textType == "link" %>
+              <%= link_to image_tag("/assets/images/plus.png", class: "plus-icon"), edit_user_etkh_profile_path(current_user, current_user.etkh_profile) %>
+            <% else %>
+              <%= image_tag("/assets/images/plus.png", class: "plus-icon") %>
+            <% end %>
             <p class="tip-text"><%= tip %></p>
           </div>
         <% end %>
