--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -17,4 +17,4 @@
       -# this line is important
 
     #members-list
-      = render partial: 'profiles_selection', locals: { users: @selected_users }
+      = render partial: 'profiles_selection', locals: { users: @selected_users, no_results: false }
