--- a/app/assets/stylesheets/profile_general.css.scss
+++ b/app/assets/stylesheets/profile_general.css.scss
@@ -149,17 +149,13 @@
     margin-bottom: 25px;
     //display: inline-block;
   }
-  #all-members-link {
-    //display: inline-block;
-  }
   #members-list {
     position: relative;
   }
-  #loading-icon {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
+  .loading-icon {
+    margin-left: 400px;
+    padding-top: 15px;
+    padding-bottom: 50px;
   }
 }
 
