Made all javascript external

--- a/app/views/etkh_profiles/_form.html.haml
+++ b/app/views/etkh_profiles/_form.html.haml
@@ -1,4 +1,5 @@
-= javascript_include_tag "application-form.js"
+- content_for :javascript_includes do
+  = javascript_include_tag "application-form.js"
 
 = simple_form_for(current_user, url: user_etkh_profile_url(current_user, current_user.etkh_profile),
                                 html: { class: 'form-horizontal' },
