--- a/app/views/etkh_profiles/_profile_hover_popup.html.haml
+++ b/app/views/etkh_profiles/_profile_hover_popup.html.haml
@@ -1,5 +1,7 @@
 -# user passed in as local var
 - profile = user.etkh_profile
+- content_for :javascript_includes do
+  = javascript_include_tag "profile-popup.js"
 #profile-hover
   .row-fluid
     .span4
@@ -19,24 +21,3 @@
               = profile.organisation
             %p.industry
               = profile.career_sector
-
-:javascript
-  $(document).ready( function() {
-    // set image dimensions to avoid stretching
-    // short delay to allow images to load
-    setTimeout( function() {
-      $("#profile-hover").find(".avatar").find("img").each( function() {
-        var img = new Image();
-        img.src = $(this).attr('src');
-
-        if (img.width > img.height)
-        {
-          $(this).css('height', '100%');
-        }
-        else
-        {
-          $(this).css('width', '100%');
-        }
-      });
-    }, 20);
-  });
