--- a/app/views/etkh_profiles/_search_form.html.haml
+++ b/app/views/etkh_profiles/_search_form.html.haml
@@ -1,6 +1,7 @@
 -# otherPage is passed in as a local variable to indicate whether partial is being displayed on 'our members' page or on a different page
 .search-form
-  = javascript_include_tag "search-form.js"
+  - content_for :javascript_includes do
+    = javascript_include_tag "search-form.js"
   - if otherPage == true
     -# submit links to 'our members' page where search results are displayed
     = form_tag('/members', method: 'GET', remote: false, id: "form-search") do
