--- a/app/views/etkh_profiles/_linkedin_modal.html.haml
+++ b/app/views/etkh_profiles/_linkedin_modal.html.haml
@@ -1,4 +1,5 @@
-= javascript_include_tag "linkedin-form.js"
+- content_for :javascript_includes do
+  = javascript_include_tag "linkedin-form.js"
 .linkedin-form
   .header
     %img{ src: '/assets/linkedin/linkedin-logo32.png'}
