--- a/app/views/etkh_profiles/educations/_edit_form.html.erb
+++ b/app/views/etkh_profiles/educations/_edit_form.html.erb
@@ -1,5 +1,7 @@
 <div class="edit-form">
-  <%= javascript_include_tag "education-form.js" %>
+  <% content_for :javascript_includes do %>
+    <%= javascript_include_tag "education-form.js" %>
+  <% end %>
   <% edit = @education.id.nil? ? false : true %>
 
   <%# set up content tags for data to be accessed from javascript %>
