--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -1,4 +1,5 @@
-= javascript_include_tag "members-page.js"
+- content_for :javascript_includes do
+  = javascript_include_tag "members-page.js"
 .members-page
   .span10
     .heading
