--- a/app/views/etkh_profiles/show.html.haml
+++ b/app/views/etkh_profiles/show.html.haml
@@ -1,4 +1,5 @@
-= javascript_include_tag "view-profile.js"
+- content_for :javascript_includes do
+	= javascript_include_tag "view-profile.js"
 
 = render :partial => 'profile', :locals => { :profile => @profile }
 
