--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -1,5 +1,7 @@
 - content_for :javascript_includes do
   = javascript_include_tag "members-page.js"
+  = javascript_include_tag "jquery.pageless.js"
+
 .members-page
   .span10
     .heading
