--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -1,3 +1,6 @@
+<% content_for :javascript_includes do %>
+	<%= javascript_include_tag "jquery.reveal.js" %>
+<% end %>
 <div class="modal-body alert alert-error">
   <div class="modal-heading">
     <h4>Sorry!</h4>
