--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -1,5 +1,6 @@
 - content_for :javascript_includes do
   = javascript_include_tag "edit-profile.js"
+  = javascript_include_tag "jquery.reveal.js"
 .edit-profile
   .row
     .span12
