Removed particular JS files from application.js

--- a/app/views/donations/_form.html.haml
+++ b/app/views/donations/_form.html.haml
@@ -1,3 +1,6 @@
+- content_for :javascript_includes do
+  = javascript_include_tag "bootstrap-datepicker.js"
+
 - if @donation.errors.any?
   .alert.alert-error
     <a class="close" data-dismiss="alert">×</a>
